votingapp/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vote.busyqa.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote
            port:
              number: 80
